--- a/views/index.jade
+++ b/views/index.jade
@@ -10,8 +10,10 @@ block body
   script(src='bower_components/angular-cookies/angular-cookies.js')
   script(src='bower_components/jquery/jquery.js')
   script(src='bower_components/bootstrap/dist/js/bootstrap.js')
+  script(src='http://maps.googleapis.com/maps/api/js?key=AIzaSyALAr7pbufdMA4uszXc0PhWwPL-B1OS4gU&libraries=drawing,places&sensor=false')
   script(src='js/app.js')
   script(src='js/services.js')
   script(src='js/controllers.js')
   script(src='js/filters.js')
   script(src='js/directives.js')
+  script(src="http://www.google.com/recaptcha/api/js/recaptcha_ajax.js")  
