--- a/views/partials/otp.jade
+++ b/views/partials/otp.jade
@@ -1,4 +1,4 @@
-div.col-md-4.col-md-offset-4(style="height:220px; background:rgba(189, 189, 190, 0.4); -moz-border-radius: 15px; border-radius: 15px;", ng-init="loggedIn=#{loggedIn}; priPhone=#{priPhone}")
+div.col-md-4.col-md-offset-4(style="height:220px; background:rgba(189, 189, 190, 0.4); -moz-border-radius: 15px; border-radius: 15px;", ng-init="priPhone=#{priPhone}")
 	div(style="text-align:center")
 		p Your password to login has been sent to {{priPhone}}. Please enter your password below:
 		input(type='text', ng-model='otp')
