--- a/views/partials/address.jade
+++ b/views/partials/address.jade
@@ -172,7 +172,7 @@ div.modal.fade(edit-phone-modal)
 				h4.modal-title Change Phone Number
 			div.modal-body
 				p Enter your new phone number:
-				input(type="text", ng-model='newPhoneNumber', placeholder='New Phone Number...');
+				input(type="text", ng-model='newPhoneNumber', placeholder='New Phone Number...')
 				br
 				small Enter your phone number in [00][Country Code][Area Code][Phone Number]. For eg. 1. A phone number in Norway will be: 004792509644. 2. A phone number in India will be: 00914132334270.
 			div.modal-footer
