--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,10 +1,11 @@
-html(ng-app="cdm")
+html(ng-app="ilt")
   head
     meta(charset='utf8')
     base(href='/')
-    title CDM
+    title Indoor Location Tracker
     link(rel='stylesheet', href='/css/app.css')
     link(rel="stylesheet", type="text/css", href="bower_components/bootstrap/dist/css/bootstrap.min.css")
     link(rel="stylesheet", type="text/css", href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css")
+    link(rel="stylesheet", type="text/css", href="bower_components/jquery-ui/themes/smoothness/jquery-ui.min.css")
   body
     block body
