--- a/views/index.jade
+++ b/views/index.jade
@@ -2,18 +2,26 @@ extends layout
 
 block body
   img(src="img/umslogo.jpg", style="margin: 10px")
-  div(ng-view)
+  div
+    div.navbar.navbar-default
+      ul.nav.navbar-nav(nav-pills-activation role='navigation')
+        li
+          a.navbar-brand Indoor Location Tracker
+        li
+          a(href='allplans') Plans
+        li
+          a(href='allreaders') Readers
+  div(ng-view, style="margin: 5px")
 
 
   script(src='bower_components/angular/angular.js')
   script(src='bower_components/angular-route/angular-route.js')
-  script(src='bower_components/angular-cookies/angular-cookies.js')
   script(src='bower_components/jquery/jquery.js')
   script(src='bower_components/bootstrap/dist/js/bootstrap.js')
-  script(src='http://maps.googleapis.com/maps/api/js?key=AIzaSyALAr7pbufdMA4uszXc0PhWwPL-B1OS4gU&libraries=drawing,places&sensor=false')
+  script(src='bower_components/jquery-ui/ui/minified/jquery-ui.min.js')
   script(src='js/app.js')
   script(src='js/services.js')
   script(src='js/controllers.js')
   script(src='js/filters.js')
   script(src='js/directives.js')
-  script(src="http://www.google.com/recaptcha/api/js/recaptcha_ajax.js")  
+  script(src='/socket.io/socket.io.js')
