--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,8 +1,8 @@
-html(ng-app="ilt")
+html(ng-app="capp")
   head
     meta(charset='utf8')
     base(href='/')
-    title Indoor Location Tracker
+    title Consumer App Server
     link(rel='stylesheet', href='/css/app.css')
     link(rel="stylesheet", type="text/css", href="bower_components/bootstrap/dist/css/bootstrap.min.css")
     link(rel="stylesheet", type="text/css", href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css")
