minor changes to test app

--- a/views/partials/testapp.jade
+++ b/views/partials/testapp.jade
@@ -1,5 +1,6 @@
-p Message: 
-p {{message}}
+.col-md-12
+	p Alert ID: 
+	p {{message}}
 
-p Coordinates: 
-p {{coords}}
+	p Coordinates: 
+	p {{coords}}
